// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ColorSelector> should render 1`] = `
<InputGroup>
  <Input__InputLabel>
    Select a color
  </Input__InputLabel>
  <div>
    <ColorSelector__ColorButton
      color="green"
      name="color"
      onClick={[Function]}
    />
    <ColorSelector__ColorButton
      color="orange"
      name="color"
      onClick={[Function]}
    />
    <ColorSelector__ColorButton
      color="yellow"
      name="color"
      onClick={[Function]}
    />
    <ColorSelector__ColorButton
      color="red"
      name="color"
      onClick={[Function]}
    />
    <ColorSelector__ColorButton
      color="purple"
      name="color"
      onClick={[Function]}
    />
    <ColorSelector__ColorButton
      color="blue"
      name="color"
      onClick={[Function]}
    />
    <ColorSelector__ColorButton
      color="primary"
      name="color"
      onClick={[Function]}
    />
  </div>
  <Input__InputLabel>
    or enter a custom color 
  </Input__InputLabel>
  <ColorSelector__ColorInput
    name="color"
    onChange={[Function]}
    placeholder="Ex. #D3D3D3"
    value=""
  />
  <Input__InputError />
</InputGroup>
`;

exports[`<CreateLabel> should render 1`] = `
<div>
  <h3>
    Create a label
  </h3>
  <form>
    <InputGroup>
      <Input__InputLabel>
        Name
      </Input__InputLabel>
      <Input
        error=""
        name="labelName"
        onChange={[Function]}
        placeholder="Label name"
        value=""
      />
      <Input__InputError />
      <Input__InputLabel>
        Description
      </Input__InputLabel>
      <Input
        name="description"
        onChange={[Function]}
        placeholder="Description"
        value=""
      />
    </InputGroup>
    <ColorSelector
      color=""
      errorColor=""
      name="color"
      onColorChange={[Function]}
    />
    <Button
      color="green"
      disabled={false}
      onClick={[Function]}
      tipPlacement="top"
      type="button"
    >
      Create
    </Button>
  </form>
</div>
`;

exports[`<EditLabel> should render 1`] = `
<div>
  <h3>
    Edit a label
  </h3>
  <form>
    <InputGroup>
      <Input__InputLabel>
        Name
      </Input__InputLabel>
      <Input
        error=""
        name="name"
        onChange={[Function]}
        placeholder="Label name"
        value=""
      />
      <Input__InputError />
      <Input__InputLabel>
        Description
      </Input__InputLabel>
      <Input
        name="description"
        onChange={[Function]}
        placeholder="Description"
        value=""
      />
    </InputGroup>
    <ColorSelector
      color=""
      errorColor=""
      name="color"
      onColorChange={[Function]}
    />
    <Button
      color="green"
      disabled={false}
      onClick={[Function]}
      tipPlacement="top"
      type="button"
    >
      Save
    </Button>
    <Button
      color="grey"
      disabled={false}
      onClick={[Function]}
      tipPlacement="top"
      type="button"
    >
      Cancel
    </Button>
  </form>
</div>
`;
